fixed: close sidepanel on mobile, disabled debug mode i18next, fix disabled button styling

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -40,6 +40,7 @@
 
   &:disabled {
     background-color: $gray-300;
+    border-color: $gray-600;
     color: $gray-500;
   }
 }
