--- a/src/components/theme-toggle/styles.module.scss
+++ b/src/components/theme-toggle/styles.module.scss
@@ -2,11 +2,12 @@
   border: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .themeOption {
-  margin: 15px 0;
-
   input {
     margin-right: 10px;
   }
